assets/css/style.scss
/* ... */
#footer,
.content {
	margin: 0 20vw 0;
}

@media only screen and (max-width: 2100px) {

	#footer,
	.content {
		margin: 0 16vw 0;
	}
}

@media only screen and (max-width: 1600px) {

	#footer,
	.content {
		margin: 0 175px 0;
	}
}

@media only screen and (max-width: 1250px) {

	#footer,
	.content {
		margin: 0 75px 0;
	}
}

@media only screen and (max-width: 800px) {

	#footer,
	.content {
		margin: 0 50px 0;
	}
}

@media only screen and (max-width: 600px) {

	#footer,
	.content {
		margin: 0 20px 0;
	}
}

/********************************************************************************
************************************ Footer *************************************
/********************************************************************************/
#footer {
	-webkit-user-select: none;
	user-select: none;
	position: relative;
	margin-top: auto !important;
	text-align: center;
	padding: 20px 0;
	font-size: 15px;
	line-height: 20px;
}

@media only screen and (max-width: 1023px) {
	#footer {
		padding: 25px 0 95px;
	}
}

/********************************************************************************
************** Lazy load (ps. suggest to use on solid images only) **************
/********************************************************************************/
img.lazy-img {
	background: linear-gradient(110deg, var(--lazy-load-background) 12%, var(--lazy-load-shine) 21%, var(--lazy-load-background) 30%);
	background-size: 200% 100%;
	animation: 1.5s shine linear infinite;
}

img.lazy-img.lazy-complete {
	background: none;
}

@keyframes shine {
	100% {
		background-position-x: -200%;
	}
}

/********************************************************************************
********************************** Text styles **********************************
/********************************************************************************/
.main-title {
	-webkit-user-select: none;
	user-select: none;
	margin-top: 0;
	font-size: 40px;
	font-weight: 700;
}

.subheader-text {
	-webkit-user-select: none;
	user-select: none;
	font-size: 24px;
	font-weight: 700;
	margin-bottom: 10px;
}

.body-text {
	font-size: 16px;
	font-weight: 500;
}

.heading {
	-webkit-user-select: none;
	user-select: none;
}

.align-right {
	text-align: right;
}

h1.heading {
	font-size: 32px;
}

@media only screen and (max-width: 1023px) {
	h1.heading {
		text-align: center;
		font-size: 29px;
	}
}

@media only screen and (max-width: 800px) {
	h1.heading {
		font-size: 27px;
	}
}

@media only screen and (max-width: 400px) {
	h1.heading {
		font-size: 24px;
	}
}

/********************************************************************************
* link styles (elements without any class -or- with specific "hoverable" class) *
*********************************************************************************/
a:not([class]),
a.hoverable {
	@include link-animate;
}

a:not([class]):focus-visible,
a.hoverable:focus-visible {
	@extend %link-focusable;
}

@mixin link-hover($hover_or_active) {

	a:not([class]):#{$hover_or_active},
	a.hoverable:#{$hover_or_active} {
		@include link-hoverable;
	}
}

@media (hover: hover) {
	@include link-hover("hover");
}

@media (hover: none) {
	@include link-hover("active");
}

/********************************************************************************
********************************* Button styles *********************************
/********************************************************************************/
.button {
	display: inline-flex;
	-webkit-user-select: none;
	user-select: none;
	width: fit-content;
	height: 40px;
	font-size: 16px;
    line-height: 16px;
	padding: 8px 16px;
	border: 3px solid var(--button-border);
	background: none;
	border-radius: 50px;
	text-decoration: none;
	gap: 5px;
	align-items: center;
	cursor: pointer;
	vertical-align: bottom;
}

.button,
.button * {
	transition: background-color .15s ease, filter .15s ease, transform .3s ease;
}

.button>i {
	line-height: inherit;
}

.button>.button-text {
	pointer-events: none;
	font-size: 14px;
	font-weight: 700;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.button.right-arrow-icon {
	width: 16px;
	height: 16px;
	margin-top: 1px;
}

.button.icon-link {
	transition: transform 200ms ease-in-out;
}

.button.icon-link:hover .button.icon-link:focus-visible {
	cursor: pointer;
	stroke-width: 5;
	margin: 0;
	transform: rotate(15deg);
}

.button.filled {
	background: var(--button-filled-bg);
	border: none;
}

.button.filled:focus-visible {
	@extend %link-focusable;
}

.button.filled>.button-text,
.button.filled>i {
	filter: invert(1);
}

.button.mini {
	height: 26px;
	font-size: 11px;
	line-height: 16px;
	padding: 5px 9px;
}

.button.mini>.button-text {
	font-size: 13px;
}

.button>i.zoom {
	//fixes chrome glitch
	transform-origin: center left;
	transform: scale3d(1, 1, 1);
}

@mixin button-hover($hover_or_active) {

	.button:#{$hover_or_active},
	.button:focus-visible {
		background: var(--button-bg-hover);
	}

	.button:#{$hover_or_active}>i.move,
	.button:focus-visible>i.move {
		transform: translateX(5px);
	}

	.button:#{$hover_or_active}>i.rotate,
	.button:focus-visible>i.rotate {
		transform: rotateZ(45deg);
	}

	.button:#{$hover_or_active}>i.zoom,
	.button:focus-visible>i.zoom {
		transform: scale3d(1.2, 1.2, 1.2);
	}

	.button:#{$hover_or_active}>*,
	.button:focus-visible>* {
		filter: invert(1);
	}

	.button.filled:#{$hover_or_active} {
		background: var(--button-filled-bg-hover);
	}

	.button.mini:#{$hover_or_active}>i.move,
	.button.mini:focus-visible>i.move {
		transform: translateX(2px);
	}
}

@media (hover: hover) {
	@include button-hover("hover");
}

@media (hover: none) {
	@include button-hover("active");
}

/********************************************************************************
****************************** Prettier list style ******************************
/********************************************************************************/
ul,
ol {
	padding-left: 19px;
}
/* ... */

